# nova-rxt

./: .gitignore  .stestr.conf  Dockerfile  Dockerfile.libvirt  README.md  inplace-migration.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yaml
nova/virt/nova_rxt/: __init__.py  driver.py  xml.py
nova/virt/nova_rxt/tests/: test_driver.py  test_xml.py
