[metadata]
name = nova_rxt
summary = OpenStack Nova libvirt-subclass driver enabling QEMU 8.1+ Xen emulation for PVHVM guests
description_file = README.md
long_description_content_type = text/markdown
author = Cloudnull
author_email = kevin@cloudnull.com
home_page = https://github.com/cloudnull/nova-rxt
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    nova.virt.nova_rxt

[entry_points]
# Nova's load_compute_driver hard-prepends 'nova.virt.' to the configured
# compute_driver and calls importutils.import_object, so the driver must
# live under nova.virt.*. Operators set
# compute_driver = nova_rxt.driver.XenEmulationDriver in nova.conf,
# which resolves to nova.virt.nova_rxt.driver.XenEmulationDriver.
